Add Project Files

--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -9,7 +9,7 @@
     <h6 class="card-subtitle mb-2 text-body-secondary">Date:23 to 25 February, 2026</h6>
     <p class="card-text">FFJ is organising a exhibition, visit us from 9:00AM to 2:00PM</p>
     <p class="card-text"></p>
-    <p>For more info write to:&nbsp;<a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWrRqhKRGVDgVQFSnKtfhBNpPhvqzXRXvHsWhpdtTRtxStrSMXhKHHppPPMlhzntPDwgZDhml" class="card-link">ffj@jecrc.ac.in</a></p>
+    <p>For more info write to:&nbsp;ffj@jecrc.ac.in</p>
     
   </div>
 
